# vue-django-docker-template

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: default.yml
.github/workflows/: code-quality-backend.yml  code-quality-frontend.yml
backend/: .env.example
backend/core/: settings.py  urls.py
backend/sample_app/: apps.py
backend/template_app/management/commands/: create_superuser_if_not_exists.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dockerignore
